hack=y fix to get rid of scrollbar

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,9 @@
 }
 
 
+#app {
+	overflow-y: hidden;
+}
 /* POSTMEDIA STYLES */
 #app h1 {
 	color: var(--black);
